Fix image size on mobile

--- a/src/sass/components/_banner.scss
+++ b/src/sass/components/_banner.scss
@@ -41,21 +41,23 @@
 		height: 100%;
 		background-size: cover;
 		background-position: center;
+		// @include mq($until: medium) {
+		// 	background-image: none !important;
+		// }
 
 		&--desktop {
 			opacity: 0;
 		}
 
 		img {
-			// max-width: none;
-			// min-width: 100%;
-			// min-height: 100%;
-			// width: auto;
-
-			// position: absolute;
-			// top: 50%;
-			// left: 50%;
-			// transform: translate(-50%, -50%);
+			@include mq($until: medium) {
+				max-width: none;
+				min-width: 100%;
+				position: absolute;
+				top: 50%;
+				left: 50%;
+				transform: translate(-50%, -50%);
+			}
 		}
 	}
 	
